Updated some configs and tests